--- a/force-app/Exercises/main/default/lwc/studentBrowser/studentBrowser.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowser/studentBrowser.html
@@ -1,6 +1,6 @@
 <template>
 	<c-student-browser-form></c-student-browser-form>
 	<lightning-tabset variant="scoped">
-		<lightning-tab label="Gallery"> <c-student-tiles student-list={studentList}></c-student-tiles> </lightning-tab>
+		<lightning-tab label="Gallery"> <c-student-tiles student-list={students.data}></c-student-tiles> </lightning-tab>
 	</lightning-tabset>
 </template>
