--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -24,7 +24,8 @@
 						variant="label-hidden"
 						value={selectedDeliveryId}
 						placeholder="Select a delivery"
-						options={deliveries}
+            options={deliveries}
+            onchange={onDeliveryChange}
 					>
 					</lightning-combobox>
 				</lightning-layout-item>
