--- a/force-app/Exercises/main/default/lwc/studentBrowser/studentBrowser.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowser/studentBrowser.html
@@ -1,6 +1,10 @@
 <template>
 	<c-student-browser-form onfilterchange={handleFilterChange}></c-student-browser-form>
 	<lightning-tabset variant="scoped">
-		<lightning-tab label="Gallery"> <c-student-tiles student-list={students.data} onstudentselected={handleStudentSelected}></c-student-tiles> </lightning-tab>
+		<lightning-tab label="Gallery">
+			<div class="slds-scrollable scrollerSize">
+				<c-student-tiles student-list={students.data} onstudentselected={handleStudentSelected}> </c-student-tiles>
+			</div>
+		</lightning-tab>
 	</lightning-tabset>
 </template>
