--- a/force-app/Exercises/main/default/lwc/layoutManager/layoutManager.html
+++ b/force-app/Exercises/main/default/lwc/layoutManager/layoutManager.html
@@ -1,4 +1,11 @@
 <template>
+	<span onshowmodal={handleShowModal}>
+	<c-modal header={modalHeader}>
+		{modalContent}
+		<div slot="footer">
+			<lightning-button label="Close" variant="brand" onclick={closeModal}></lightning-button>
+		</div>
+	</c-modal>
 	<lightning-layout horizontal-align="space" multiple-rows>
 		<lightning-layout-item padding="around-small" size="12" small-device-size="12" medium-device-size="3" large-device-size="2">
 			<c-aw-navigation onnavitemselected={handleNavItemSelected}></c-aw-navigation>
@@ -31,4 +38,5 @@
 			</lightning-layout-item>
 		</template>
 	</lightning-layout>
+</span>
 </template>
