--- a/force-app/Exercises/main/default/lwc/tripReportFormAdvanced/tripReportFormAdvanced.html
+++ b/force-app/Exercises/main/default/lwc/tripReportFormAdvanced/tripReportFormAdvanced.html
@@ -4,16 +4,51 @@
 			<lightning-combobox
 				name="instructor"
 				label="Select Instructor"
-				variant="label-hidden"
 				options={instructors}
 				value={instructorId}
 				onchange={onInstructorChange}
 				placeholder="Select an instructor"
+				class="validateMe"
+				required
+				onblur={onBlur}
+				message-when-value-missing="Please select an instructor"
 			>
 			</lightning-combobox>
-			<lightning-input onchange={onLocationNameChange} type="text" name="locationName" label="Location Name" value={locationName}></lightning-input>
-			<lightning-input onchange={onDateVisitedChange} type="date" name="dateVisited" label="Date Visited" value={dateVisited}></lightning-input>
-			<lightning-radio-group onchange={onReviewTypeChange} type="button" name="reviewType" label="Review of:" options={reviewTypes} value={reviewType}>
+			<lightning-input
+				onchange={onLocationNameChange}
+				type="text"
+				name="locationName"
+				label="Location Name"
+				value={locationName}
+				class="validateMe"
+				required
+				onblur={onBlur}
+				message-when-value-missing="Please select a location"
+			></lightning-input>
+			<lightning-input
+				onchange={onDateVisitedChange}
+				type="date"
+				name="dateVisited"
+				label="Date Visited"
+				value={dateVisited}
+				class="validateMe"
+				required
+				onblur={onBlur}
+				message-when-value-missing="Please enter a date"
+				>></lightning-input
+			>
+			<lightning-radio-group
+				onchange={onReviewTypeChange}
+				type="button"
+				name="reviewType"
+				label="Review of:"
+				options={reviewTypes}
+				value={reviewType}
+				required
+				onblur={onBlur}
+				message-when-value-missing="Please
+      select a review type"
+			>
 			</lightning-radio-group>
 			<lightning-slider
 				onchange={onRatingChange}
@@ -27,7 +62,7 @@
 			Review:<br />
 			<lightning-input-rich-text disabled-categories="FORMAT_FONT" value={review} onchange={onReviewChange}></lightning-input-rich-text>
 			<div class="slds-text-align_center slds-m-top_medium">
-				<lightning-button variant="brand" label="Save" onclick={onSave} class="slds-m-right_x-small"></lightning-button>
+				<lightning-button variant="brand" label="Save" onclick={onSave} disabled={saveButtonDisabled} class="slds-m-right_x-small"></lightning-button>
 				<lightning-button label="Cancel"></lightning-button>
 			</div>
 		</form>
